# Eldorado

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
src/: main.cpp
src/Cards/: CMakeLists.txt
src/Cards/include/Cards/: cards.hpp  cards_mock.hpp
src/Cards/src/: cards.cpp
src/Networking/: CMakeLists.txt
src/Networking/include/Networking/: networking.hpp
src/Networking/src/: networking.cpp
src/Player/: CMakeLists.txt
src/Player/include/Player/: player.hpp
src/Player/src/: player.cpp
src/Player/test/: card_handling_test.cpp
src/Renderer/: CMakeLists.txt
src/Renderer/include/Renderer/: card.hpp  store.hpp
src/Renderer/src/: store.cpp
src/Store/: CMakeLists.txt
src/Store/include/Store/: store.hpp
src/Store/src/: store.cpp
